--- a/experimental/2_rnn_gru.ipynb
+++ b/experimental/2_rnn_gru.ipynb
@@ -302,6 +302,82 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GRU(nn.Module):\n",
+    "    def __init__(self, input_dim, emb_dim, hid_dim, output_dim, pad_idx):\n",
+    "\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
+    "        self.gru = nn.GRUCell(emb_dim, hid_dim)\n",
+    "        self.fc = nn.Linear(hid_dim, output_dim)\n",
+    "\n",
+    "    def forward(self, text, lengths):\n",
+    "\n",
+    "        # text = [seq len, batch size]\n",
+    "        # lengths = [batch size]\n",
+    "\n",
+    "        embedded = self.embedding(text)\n",
+    "\n",
+    "        # embedded = [seq len, batch size, emb dim]\n",
+    "\n",
+    "        seq_len, batch_size, _ = embedded.shape\n",
+    "        hid_dim = self.gru.hidden_size\n",
+    "                \n",
+    "        hidden = torch.zeros(batch_size, hid_dim).to(embedded.device)\n",
+    "        \n",
+    "        for i in range(seq_len):\n",
+    "            x = embedded[i]\n",
+    "            hidden = self.gru(x, hidden)\n",
+    "        \n",
+    "        prediction = self.fc(hidden)\n",
+    "\n",
+    "        # prediction = [batch size, output dim]\n",
+    "\n",
+    "        return prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GRU(nn.Module):\n",
+    "    def __init__(self, input_dim, emb_dim, hid_dim, output_dim, pad_idx):\n",
+    "\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
+    "        self.gru = nn.GRU(emb_dim, hid_dim)\n",
+    "        self.fc = nn.Linear(hid_dim, output_dim)\n",
+    "\n",
+    "    def forward(self, text, lengths):\n",
+    "\n",
+    "        # text = [seq len, batch size]\n",
+    "        # lengths = [batch size]\n",
+    "\n",
+    "        embedded = self.embedding(text)\n",
+    "\n",
+    "        # embedded = [seq len, batch size, emb dim]\n",
+    "\n",
+    "        output, hidden = self.gru(embedded)\n",
+    "\n",
+    "        # output = [seq_len, batch size, n directions * hid dim]\n",
+    "        # hidden = [n layers * n directions, batch size, hid dim]\n",
+    "\n",
+    "        prediction = self.fc(hidden.squeeze(0))\n",
+    "\n",
+    "        # prediction = [batch size, output dim]\n",
+    "\n",
+    "        return prediction "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -314,7 +390,7 @@
     "\n",
     "        super().__init__()\n",
     "\n",
-    "        self.embedding = nn.Embedding(input_dim, emb_dim)\n",
+    "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
     "        self.gru = nn.GRU(emb_dim, hid_dim)\n",
     "        self.fc = nn.Linear(hid_dim, output_dim)\n",
     "\n",
@@ -333,7 +409,7 @@
     "\n",
     "        output, _ = nn.utils.rnn.pad_packed_sequence(packed_output)\n",
     "\n",
-    "        # outputs = [seq_len, batch size, n directions * hid dim]\n",
+    "        # output = [seq_len, batch size, n directions * hid dim]\n",
     "        # hidden = [n layers * n directions, batch size, hid dim]\n",
     "\n",
     "        prediction = self.fc(hidden.squeeze(0))\n",
@@ -345,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -363,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -377,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -402,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -416,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -447,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -462,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -485,7 +561,7 @@
        "        [ 1.1753,  0.0460, -0.3542,  ...,  0.4510,  0.0485, -0.4015]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -509,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -522,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -535,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -549,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -566,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -606,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -642,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -659,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -677,7 +753,7 @@
       "Epoch: 01 | Epoch Time: 0m 8s\n",
       "\tTrain Loss: 0.634 | Train Acc: 62.44%\n",
       "\t Val. Loss: 0.474 |  Val. Acc: 77.64%\n",
-      "Epoch: 02 | Epoch Time: 0m 8s\n",
+      "Epoch: 02 | Epoch Time: 0m 7s\n",
       "\tTrain Loss: 0.375 | Train Acc: 83.86%\n",
       "\t Val. Loss: 0.333 |  Val. Acc: 86.20%\n",
       "Epoch: 03 | Epoch Time: 0m 8s\n",
@@ -686,16 +762,16 @@
       "Epoch: 04 | Epoch Time: 0m 8s\n",
       "\tTrain Loss: 0.170 | Train Acc: 93.78%\n",
       "\t Val. Loss: 0.316 |  Val. Acc: 89.58%\n",
-      "Epoch: 05 | Epoch Time: 0m 8s\n",
+      "Epoch: 05 | Epoch Time: 0m 7s\n",
       "\tTrain Loss: 0.106 | Train Acc: 96.58%\n",
       "\t Val. Loss: 0.319 |  Val. Acc: 89.63%\n",
-      "Epoch: 06 | Epoch Time: 0m 8s\n",
+      "Epoch: 06 | Epoch Time: 0m 7s\n",
       "\tTrain Loss: 0.066 | Train Acc: 98.08%\n",
       "\t Val. Loss: 0.327 |  Val. Acc: 89.52%\n",
       "Epoch: 07 | Epoch Time: 0m 8s\n",
       "\tTrain Loss: 0.041 | Train Acc: 98.82%\n",
       "\t Val. Loss: 0.451 |  Val. Acc: 88.07%\n",
-      "Epoch: 08 | Epoch Time: 0m 8s\n",
+      "Epoch: 08 | Epoch Time: 0m 7s\n",
       "\tTrain Loss: 0.021 | Train Acc: 99.43%\n",
       "\t Val. Loss: 0.472 |  Val. Acc: 88.16%\n",
       "Epoch: 09 | Epoch Time: 0m 7s\n",
@@ -734,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -763,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -785,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -802,7 +878,7 @@
        "0.07642160356044769"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -832,7 +908,7 @@
        "0.8930155634880066"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -862,7 +938,7 @@
        "0.2206803858280182"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -893,7 +969,7 @@
        "0.5373267531394958"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
