--- a/experimental/3_rnn_bilstm.ipynb
+++ b/experimental/3_rnn_bilstm.ipynb
@@ -314,7 +314,7 @@
     "\n",
     "        super().__init__()\n",
     "\n",
-    "        self.embedding = nn.Embedding(input_dim, emb_dim)\n",
+    "        self.embedding = nn.Embedding(input_dim, emb_dim, padding_idx = pad_idx)\n",
     "        self.lstm = nn.LSTM(emb_dim, hid_dim, num_layers = n_layers, bidirectional = True, dropout = dropout)\n",
     "        self.fc = nn.Linear(2 * hid_dim, output_dim)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
@@ -337,8 +337,8 @@
     "        # outputs = [seq_len, batch size, n directions * hid dim]\n",
     "        # hidden = [n layers * n directions, batch size, hid dim]\n",
     "\n",
-    "        hidden_fwd = hidden[-1]\n",
-    "        hidden_bck = hidden[-2]\n",
+    "        hidden_fwd = hidden[-2]\n",
+    "        hidden_bck = hidden[-1]\n",
     "\n",
     "        # hidden_fwd/bck = [batch size, hid dim]\n",
     "\n",
@@ -687,35 +687,35 @@
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.668 | Train Acc: 59.01%\n",
-      "\t Val. Loss: 0.652 |  Val. Acc: 62.33%\n",
+      "\tTrain Loss: 0.656 | Train Acc: 60.38%\n",
+      "\t Val. Loss: 0.609 |  Val. Acc: 64.97%\n",
       "Epoch: 02 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.602 | Train Acc: 67.75%\n",
-      "\t Val. Loss: 0.478 |  Val. Acc: 77.18%\n",
+      "\tTrain Loss: 0.594 | Train Acc: 69.33%\n",
+      "\t Val. Loss: 0.578 |  Val. Acc: 71.96%\n",
       "Epoch: 03 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.497 | Train Acc: 76.59%\n",
-      "\t Val. Loss: 0.478 |  Val. Acc: 80.62%\n",
+      "\tTrain Loss: 0.565 | Train Acc: 70.59%\n",
+      "\t Val. Loss: 0.476 |  Val. Acc: 77.87%\n",
       "Epoch: 04 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.456 | Train Acc: 79.24%\n",
-      "\t Val. Loss: 0.397 |  Val. Acc: 83.30%\n",
+      "\tTrain Loss: 0.487 | Train Acc: 76.72%\n",
+      "\t Val. Loss: 0.453 |  Val. Acc: 79.55%\n",
       "Epoch: 05 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.391 | Train Acc: 82.72%\n",
-      "\t Val. Loss: 0.344 |  Val. Acc: 85.23%\n",
+      "\tTrain Loss: 0.415 | Train Acc: 81.43%\n",
+      "\t Val. Loss: 0.403 |  Val. Acc: 83.60%\n",
       "Epoch: 06 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.345 | Train Acc: 85.30%\n",
-      "\t Val. Loss: 0.350 |  Val. Acc: 86.12%\n",
+      "\tTrain Loss: 0.349 | Train Acc: 85.02%\n",
+      "\t Val. Loss: 0.337 |  Val. Acc: 86.41%\n",
       "Epoch: 07 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.314 | Train Acc: 86.75%\n",
-      "\t Val. Loss: 0.310 |  Val. Acc: 87.50%\n",
+      "\tTrain Loss: 0.308 | Train Acc: 86.93%\n",
+      "\t Val. Loss: 0.344 |  Val. Acc: 85.36%\n",
       "Epoch: 08 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.266 | Train Acc: 89.54%\n",
-      "\t Val. Loss: 0.315 |  Val. Acc: 88.16%\n",
+      "\tTrain Loss: 0.279 | Train Acc: 88.49%\n",
+      "\t Val. Loss: 0.315 |  Val. Acc: 87.62%\n",
       "Epoch: 09 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.247 | Train Acc: 90.21%\n",
-      "\t Val. Loss: 0.285 |  Val. Acc: 89.02%\n",
+      "\tTrain Loss: 0.252 | Train Acc: 89.98%\n",
+      "\t Val. Loss: 0.326 |  Val. Acc: 88.16%\n",
       "Epoch: 10 | Epoch Time: 0m 24s\n",
-      "\tTrain Loss: 0.217 | Train Acc: 91.79%\n",
-      "\t Val. Loss: 0.282 |  Val. Acc: 88.98%\n"
+      "\tTrain Loss: 0.218 | Train Acc: 91.31%\n",
+      "\t Val. Loss: 0.293 |  Val. Acc: 89.16%\n"
      ]
     }
    ],
@@ -761,7 +761,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.294 | Test Acc: 87.95%\n"
+      "Test Loss: 0.307 | Test Acc: 88.17%\n"
      ]
     }
    ],
@@ -811,7 +811,7 @@
     {
      "data": {
       "text/plain": [
-       "0.008071469143033028"
+       "0.015085793100297451"
       ]
      },
      "execution_count": 34,
@@ -841,7 +841,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9896865487098694"
+       "0.991886556148529"
       ]
      },
      "execution_count": 35,
@@ -871,7 +871,7 @@
     {
      "data": {
       "text/plain": [
-       "0.029767075553536415"
+       "0.6712993383407593"
       ]
      },
      "execution_count": 36,
@@ -902,7 +902,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5513127446174622"
+       "0.28944137692451477"
       ]
      },
      "execution_count": 37,
