updated transformer with init

--- a/experimental/5_transformer.ipynb
+++ b/experimental/5_transformer.ipynb
@@ -416,6 +416,27 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def init_parameters(model):\n",
+    "    for n, p in model.named_parameters():\n",
+    "        if p.dim() > 1:\n",
+    "            nn.init.xavier_uniform_(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_parameters(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -429,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -454,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -468,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -499,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -514,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -537,7 +558,7 @@
        "        [-0.2612,  0.6821, -0.2295,  ..., -0.5306,  0.0863,  0.4852]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -561,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -574,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -587,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -601,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -618,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -658,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -694,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -711,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -726,36 +747,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 26s\n",
-      "\tTrain Loss: 0.736 | Train Acc: 50.26%\n",
-      "\t Val. Loss: 0.694 |  Val. Acc: 49.39%\n",
+      "Epoch: 01 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.986 | Train Acc: 49.99%\n",
+      "\t Val. Loss: 0.693 |  Val. Acc: 50.61%\n",
       "Epoch: 02 | Epoch Time: 0m 25s\n",
-      "\tTrain Loss: 0.688 | Train Acc: 53.50%\n",
-      "\t Val. Loss: 0.622 |  Val. Acc: 65.06%\n",
+      "\tTrain Loss: 0.711 | Train Acc: 50.42%\n",
+      "\t Val. Loss: 0.694 |  Val. Acc: 49.39%\n",
       "Epoch: 03 | Epoch Time: 0m 25s\n",
-      "\tTrain Loss: 0.587 | Train Acc: 69.26%\n",
-      "\t Val. Loss: 0.540 |  Val. Acc: 73.44%\n",
-      "Epoch: 04 | Epoch Time: 0m 25s\n",
-      "\tTrain Loss: 0.491 | Train Acc: 76.80%\n",
-      "\t Val. Loss: 0.400 |  Val. Acc: 83.42%\n",
-      "Epoch: 05 | Epoch Time: 0m 26s\n",
-      "\tTrain Loss: 0.432 | Train Acc: 80.34%\n",
-      "\t Val. Loss: 0.353 |  Val. Acc: 84.31%\n",
-      "Epoch: 06 | Epoch Time: 0m 26s\n",
-      "\tTrain Loss: 0.397 | Train Acc: 82.40%\n",
-      "\t Val. Loss: 0.400 |  Val. Acc: 84.29%\n",
-      "Epoch: 07 | Epoch Time: 0m 25s\n",
-      "\tTrain Loss: 0.370 | Train Acc: 83.90%\n",
-      "\t Val. Loss: 0.338 |  Val. Acc: 86.05%\n",
-      "Epoch: 08 | Epoch Time: 0m 25s\n",
-      "\tTrain Loss: 0.349 | Train Acc: 85.05%\n",
-      "\t Val. Loss: 0.326 |  Val. Acc: 86.64%\n",
-      "Epoch: 09 | Epoch Time: 0m 25s\n",
-      "\tTrain Loss: 0.327 | Train Acc: 86.02%\n",
-      "\t Val. Loss: 0.350 |  Val. Acc: 86.18%\n",
-      "Epoch: 10 | Epoch Time: 0m 25s\n",
-      "\tTrain Loss: 0.311 | Train Acc: 86.97%\n",
-      "\t Val. Loss: 0.318 |  Val. Acc: 87.43%\n"
+      "\tTrain Loss: 0.701 | Train Acc: 50.51%\n",
+      "\t Val. Loss: 0.690 |  Val. Acc: 54.57%\n",
+      "Epoch: 04 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.646 | Train Acc: 60.74%\n",
+      "\t Val. Loss: 0.431 |  Val. Acc: 80.03%\n",
+      "Epoch: 05 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.396 | Train Acc: 82.62%\n",
+      "\t Val. Loss: 0.345 |  Val. Acc: 84.42%\n",
+      "Epoch: 06 | Epoch Time: 0m 25s\n",
+      "\tTrain Loss: 0.303 | Train Acc: 87.41%\n",
+      "\t Val. Loss: 0.329 |  Val. Acc: 86.88%\n",
+      "Epoch: 07 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.250 | Train Acc: 89.76%\n",
+      "\t Val. Loss: 0.362 |  Val. Acc: 86.24%\n",
+      "Epoch: 08 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.213 | Train Acc: 91.69%\n",
+      "\t Val. Loss: 0.353 |  Val. Acc: 87.64%\n",
+      "Epoch: 09 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.199 | Train Acc: 92.32%\n",
+      "\t Val. Loss: 0.327 |  Val. Acc: 87.93%\n",
+      "Epoch: 10 | Epoch Time: 0m 24s\n",
+      "\tTrain Loss: 0.171 | Train Acc: 93.47%\n",
+      "\t Val. Loss: 0.362 |  Val. Acc: 87.67%\n"
      ]
     }
    ],
@@ -786,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -801,7 +822,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.342 | Test Acc: 85.76%\n"
+      "Test Loss: 0.354 | Test Acc: 86.14%\n"
      ]
     }
    ],
@@ -815,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -836,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -850,67 +871,7 @@
     {
      "data": {
       "text/plain": [
-       "0.006251929793506861"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentence = 'the absolute worst movie of all time.'\n",
-    "\n",
-    "predict_sentiment(tokenizer, vocab, model, device, sentence)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "aLqml9PenBMp",
-    "outputId": "1614cf67-7583-4cb6-ab17-09ea8d1774a6"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9914404153823853"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentence = 'one of the greatest films i have ever seen in my life.'\n",
-    "\n",
-    "predict_sentiment(tokenizer, vocab, model, device, sentence)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "MyjsYDeJnCui",
-    "outputId": "d87ccbee-9e91-4e64-fb2b-aaaf474f12e6"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3715572953224182"
+       "0.00010680717241484672"
       ]
      },
      "execution_count": 37,
@@ -919,8 +880,7 @@
     }
    ],
    "source": [
-    "sentence = \"i thought it was going to be one of the greatest films i have ever seen in my life, \\\n",
-    "but it was actually the absolute worst movie of all time.\"\n",
+    "sentence = 'the absolute worst movie of all time.'\n",
     "\n",
     "predict_sentiment(tokenizer, vocab, model, device, sentence)"
    ]
@@ -934,6 +894,67 @@
      "height": 35
     },
     "colab_type": "code",
+    "id": "aLqml9PenBMp",
+    "outputId": "1614cf67-7583-4cb6-ab17-09ea8d1774a6"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999222755432129"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = 'one of the greatest films i have ever seen in my life.'\n",
+    "\n",
+    "predict_sentiment(tokenizer, vocab, model, device, sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
+    "id": "MyjsYDeJnCui",
+    "outputId": "d87ccbee-9e91-4e64-fb2b-aaaf474f12e6"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07242873311042786"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = \"i thought it was going to be one of the greatest films i have ever seen in my life, \\\n",
+    "but it was actually the absolute worst movie of all time.\"\n",
+    "\n",
+    "predict_sentiment(tokenizer, vocab, model, device, sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 35
+    },
+    "colab_type": "code",
     "id": "u1ezlkkknE2M",
     "outputId": "1ba5ed25-cc74-4abc-ea51-f15798c45023"
    },
@@ -941,10 +962,10 @@
     {
      "data": {
       "text/plain": [
-       "0.27607497572898865"
+       "0.13505800068378448"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
